--- a/vignettes/Getting-started.Rmd
+++ b/vignettes/Getting-started.Rmd
@@ -156,7 +156,8 @@ epidemic_onset_map <-
   calc_epidemic_onset_from_image(start =as.POSIXct("2022-04-25",tz = "UTC"),
                                  end = as.POSIXct("2022-09-30",tz = "UTC"),
                                  c_closure = canopy_closure,
-                                 weather = wthr)
+                                 weather = wthr,
+                                 cultivar_sus = 5)
 epidemic_onset_map
 ```
 
@@ -172,6 +173,9 @@ onset_dates <- as.POSIXct(terra::values(epidemic_onset_map),
                           tz = "UTC",
                           origin = "1970-01-01")
 ```
+
+
+
 
 ```{r}
 library(ggplot2)
