--- a/vignettes/Quick_analysis.Rmd
+++ b/vignettes/Quick_analysis.Rmd
@@ -10,8 +10,293 @@ library(RANN)
 library(flextable)
 library(officer)
 library(data.table)
+library(ggplot2)
+library(mgcv)
 ```
 
+### Read in data
+```{r read_data}
+cclo <- fread("../data/20250608_cercospoRa_analysis_df_cc(in).csv")[, "data" := "canopy_closure"]
+eeeo <- fread("../data/20250607_cercospoRa_analysis_df.csv")[, "data" := "epidemic_onset"]
+```
+
+We will combine the data so we can associate observation locations with canopy 
+closure locations.  
+
+### Inspect data
+#### Check headings
+```{r inspect_data_headings}
+colnames(cclo)
+colnames(eeeo)
+```
+
+We need to change the headings so they have the same names and join them.
+
+### Rename variables  
+```{r rename_cols}
+setnames(cclo,
+         old = c("cc","region","treatment"),
+         new = c("das","inoculum","fungicide"))
+
+setnames(eeeo,
+         old = c("region","treatment"),
+         new = c("inoculum","fungicide"))
+
+# Remove date column
+eeeo[, date := NULL]
+```
+
+```{r join}
+dat <- rbind(cclo,eeeo)
+```
+
+
+```{r rename_vars}
+unique(dat$fungicide)
+
+unique(dat$inoculum)
+dat[inoculum == "roi", inoculum := "non-inoculated"]
+dat[inoculum == "ino", inoculum := "inoculated"]
+
+unique(dat$source)
+dat[source == "uav", source := "uas"]
+
+
+# Relevel fungicide factor
+cclo[,fungicide := factor(fungicide, levels = c("untreated", "treated"))]
+cclo[,inoculum := factor(inoculum, levels = c("non-inoculated", "inoculated"))]
+```
+
+
+
+### Get nearest neighbour
+Associate the closest observed epidemic onset date (EO) to the UAS or S2 
+Earliest Estimated Epidemic Onset (EEEO) date.  
+
+```{r nearest_neighbour}
+obs_nearest <- nn2(data = dat[source == "observation",.(x,y)],
+                   query = dat[,.(x,y)],
+                   k = 2)
+
+range(obs_nearest$nn.idx[,1])
+
+# associate RS estimated EO with closest observation
+dat[, obs_das:= dat[source == "observation",das][obs_nearest$nn.idx[,1]]]
+```
+
+## Canopy Closure  
+
+```{r subset_cclo}
+cclo <- dat[data == "canopy_closure"]
+```
+
+
+Do a quick check on aov of the data to inspect average differences between 
+inoculation and fungicide treatments.
+
+```{r lm_check}
+# check variance averages 
+mod1 <- lm(das ~ source + inoculum + fungicide, data = cclo)
+summary(mod1)
+```
+
+### Plot data
+```{r plot_data}
+# plot EO data from each source an treatment
+cclo |>
+  ggplot(aes(source,das, fill = inoculum)) +
+  geom_boxplot() +
+  facet_wrap(~fungicide) +
+  theme_bw() +
+  labs(x = "Remote sensing platform",
+       y = "Canopy Closure in days after sowing") +
+  theme(legend.position = "top")+
+  scale_fill_viridis_d()
+```
+
+### Model data  
+
+> What are the average influences independent of other treatments?  
+
+We will use Generalized Additive Models (GAM) to model the data, adding a spline
+to account for the spatial variance across the field.  
+
+```{r model_data2}
+# what are the average influences independant of other treatments
+mod2 <- gam(das ~ s(x,y) + source + inoculum + fungicide,
+          data = cclo,
+          method = "REML")
+summary(mod2)
+```
+
+Check the spline fit to ensure no over fitting.  
+```{r spline_fit2}
+plot(mod2)
+```
+
+There seems an overfitting due to the experimental setup.  
+
+We will try again refitting with less knots.  
+
+```{r model_data2a}
+# what are the average influences independant of other treatments
+mod2a <- gam(das ~ s(x,y, k=11) + source + inoculum + fungicide,
+          data = cclo,
+          method = "REML")
+```
+
+Check the spline fit to ensure no over fitting.  
+```{r spline_fit2}
+plot(mod2a)
+```
+
+With fewer knots we have obtained a spatial correction for the field gradient.
+
+Fungicide treated areas on average were not significantly different to untreated
+for epidemic onset days.  
+
+Non-Inoculated areas on average show earlier canopy closure, compared to 
+inoculated areas.  
+
+Remote sensing platform UAS detects average canopy closure 12 days earlier
+
+> Is there a significant interaction between measurement source and inoculum?  
+
+```{r model_data3}
+mod3 <- gam(das ~ s(x,y, k = 11) + source * inoculum + fungicide,
+            data = cclo,
+            method = "REML")
+summary(mod3)
+```
+
+There is no significant interaction in inoculated areas and canopy closure dates
+from different platforms.  
+
+> Inoculum and fungicide interaction?  
+
+```{r model_data4}
+mod4 <- gam(das ~ s(x,y, k = 11) + source + inoculum * fungicide,
+            data = cclo)
+summary(mod4)
+```
+
+No interaction
+```{r model_data4}
+mod5 <- gam(das ~ s(x,y, k = 11) + source * fungicide + inoculum,
+            data = cclo)
+summary(mod5)
+```
+
+
+#### fungicide treatment  
+
+Overall there was no significant effects of fungicide treated part of the field.
+The only significant result showed remote sensing methods S2 and UAS resulted in
+earlier EEEO dates in fungicide treated compared to untreated.  
+The fungicide treated area seemed to show thicker canopy and I think this result
+can be put down to spatial field effects.  
+
+Therefore the fungicide variable will be removed and this area treated as a 
+field replicate.  
+
+```{r model_data5}
+mod5 <- gam(das ~ s(x,y, k = 9) + source * inoculum,
+            data = cclo[fungicide == "untreated"])
+summary(mod5)
+```
+
+```{r model_data6}
+mod6 <- gam(das ~ s(x,y, k = 9) + source + inoculum,
+            data = cclo[fungicide == "untreated"])
+summary(mod6)
+```
+
+
+#### Intercept  
+The intercept here represents:
+ > Canopy closure dates in inoculated areas determined by sentinal-2  
+
+and averages around `r round(unname(mod6$coefficients["(Intercept)"]),2)` days
+after sowing.  
+  
+#### Remote sensing variables  
+UAS estimated epidemic onset an average of `r round(unname(mod5$coefficients["sourceuas"]),2)`
+days earlier than sentinal 2.  
+
+#### Inoculation effect
+
+Non-inoculated areas were on average `r round(unname(mod5$coefficients["inoculumnon-inoculated"]),2)`
+days earlier than inoculated areas.  
+
+as shown in mod5 there is no interactive effect of source, indicating both 
+remote sensing platforms showed inoculated areas had retarded phenology.
+
+#### spatial effect  
+```{r}
+plot(mod6)
+```
+
+
+
+Model comparisons
+
+```{r}
+anova(mod5,mod6)
+```
+
+
+### Proportional successes 
+
+> What is the proportion of observed EO occuring later than EEEO?  
+
+This should show us how successful the negative prognosis model is
+
+```{r prop_success_dens}
+tbl_prop_success <- 
+    cclo[source != "observation" & fungicide != "treated", 
+      list("prop_success" = round(sum(das < obs_das)/NROW(das),3),
+           n = .N), 
+      by = .(source, inoculum, fungicide)][,.(source,
+                                              inoculum,
+                                              n,
+                                              prop_success)] |>
+  flextable() |>
+  align_text_col(align = "center") |>
+  set_header_labels(source = "RS method",
+                    inoculum = "Inoculum",
+                    prop_success = "∝ success") |>
+   fontsize(size = 8, part = "body") |>
+   fontsize(size = 10, part = "header") |>
+   bg(i = seq(2,5,2),bg = "grey80",part = "body")|>
+   set_caption("Proportion of RS earliest estimated onset dates occurring prior to observed epidemic onset")
+
+tbl_prop_success
+#save_as_docx(tbl_prop_success, path = "./prop_success.docx")
+```
+
+
+Lets visualise the densities of the observed and estimated epidemic onset dates
+
+```{r prop_success}
+cclo[, obs_dif := das - obs_das]
+
+cclo[source != "observation"] |>
+  ggplot(aes(x = obs_dif, fill = inoculum)) +
+  geom_density(alpha = .5) +
+  facet_wrap(~source + fungicide) +
+  theme_bw() +
+  labs(x = "Difference between observed EO and Earliest estimated EO",
+       y = "Density") +
+  theme(legend.position = "top")+
+  scale_fill_viridis_d()+
+  geom_vline(xintercept = 0, linetype = "dashed", color = "black", size = 1)
+
+```
+
+
+***  
+
+## Epidemic Onset  
 ### Read in data
 ```{r read_data}
 dat <- fread("../data/20250607_cercospoRa_analysis_df.csv")
@@ -203,11 +488,11 @@ plot(mod5a)
 Model comparisons
 
 ```{r}
-AIC(mod2,
-    mod3,
-    mod4,
-    mod5)
-anova(mod4,mod5)
+# AIC(mod2,
+#     mod3,
+#     mod4,
+#     mod5)
+# anova(mod4,mod5)
 ```
 
 
@@ -217,7 +502,7 @@ anova(mod4,mod5)
 
 This should show us how successful the negative prognosis model is
 
-```{r prop_success}
+```{r prop_success_dens}
 tbl_prop_success <- 
     dat[source != "observation" & fungicide != "treated", 
       list("prop_success" = round(sum(das < obs_das)/NROW(das),3),
@@ -237,7 +522,7 @@ tbl_prop_success <-
    set_caption("Proportion of RS earliest estimated onset dates occurring prior to observed epidemic onset")
 
 tbl_prop_success
-save_as_docx(tbl_prop_success, path = "./prop_success.docx")
+#save_as_docx(tbl_prop_success, path = "./prop_success.docx")
 ```
 
 
@@ -258,7 +543,6 @@ dat[source != "observation"] |>
   geom_vline(xintercept = 0, linetype = "dashed", color = "black", size = 1)
 
 ```
-
 
 
 
